show the check progress

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -133,7 +133,8 @@
     <string name="status_state_download_waiting">&lt;b&gt;Queued for downloading&lt;/b&gt;</string>
     <string name="status_state_seed_waiting">&lt;b&gt;Queued for seeding&lt;/b&gt;</string>
     <string name="status_state_stopped">&lt;b&gt;Stopped&lt;/b&gt;</string>
-    <string name="status_state_checking">&lt;b&gt;Checking&lt;/b&gt;</string>
+    <string name="status_state_check_waiting">&lt;b&gt;Queued for checking&lt;/b&gt;</string>
+    <string name="status_state_checking">&lt;b&gt;Checking&lt;/b&gt; (%1$s%% tested)</string>
     <string name="status_more_downloading_format"> from %1$d of %2$d connected peers - &lt;i&gt;%3$s&lt;/i&gt;</string>
     <string name="status_more_downloading_speed_format">&#x2193; %1$s/s, &#x2191; %2$s/s</string>
     <string name="status_more_seeding_format"> to %1$d of %2$d connected peers - &lt;i&gt;%3$s&lt;/i&gt;</string>
