add filter visibility settings
implement a backup api helper

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -67,6 +67,7 @@
     
     <string name="add_profile_option">Add profile</string>
     <string name="header_label_general_preferences">General</string>
+    <string name="header_label_filters">Filters</string>
     <string name="header_label_profiles">Profiles</string>
     
     <string name="add_directory_option">Add directory</string>
@@ -235,4 +236,10 @@
     <string name="menu_order_descending">Descending</string>
 
     <string name="menu_directories_header">Directories</string>
+
+    <string name="filter_visibility">Filter Visibility</string>
+
+    <string name="directory_filters">Directory filters</string>
+
+    <string name="show_directory_filters">Show directory filters</string>
 </resources>
