--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -111,6 +111,7 @@
     <string name="create_profile_in_settings">Create a new profile in the settings</string>
     
     <string name="no_profiles_empty_list">&lt;h2&gt;No profile seems to have been created yet.&lt;/h2&gt;You should add one by visiting the &lt;i&gt;settings&lt;/i&gt;.</string>
+    <string name="just_connected_empty_list"><![CDATA[<h2>You are connected!</h2>The torrent list is being fetched.]]></string>
     <string name="no_torrents_empty_list">&lt;h2&gt;You are connected!&lt;/h2&gt;The daemon doesn\'t manage any torrents at the moment.</string>
     <string name="no_filtered_torrents_empty_list">No torrents match the current filter</string>
     <string name="no_connectivity_empty_list">&lt;h2&gt;&lt;font color="#cc0000"&gt;You need an active network connection!&lt;/font&gt;&lt;/h2&gt;</string>
