--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+* Save whether the intent was consumed in the state bundle,
+     and read it on orientation change
 * Add session configuration fragment
 * Show a small indicator on each torrent row that has tracker errors
 * Experiment with swipe-to-delete pattern (example from dashclock)
