remove the dependence on SlidingMenu.
Use the new NavigationDrawer.

Create a gradle build script

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -260,4 +260,8 @@
     <string name="debug">Debug</string>
         
     <string name="debug_summary">Display debug information in the logcat</string>
+        
+    <string name="open_drawer">open drawer</string>
+        
+    <string name="close_drawer">close drawer</string>
 </resources>
