--- a/TODO
+++ b/TODO
@@ -9,6 +9,9 @@
 * Use android:foreground="?android:selectableItemBackground" for
   selectable views
 
+* Experiment with the new SlidingPaneLayout as a replacement for the
+  two pane setup
+
 * Add session configuration fragment
 * Show a small indicator on each torrent row that has tracker errors
 * Experiment with swipe-to-delete pattern (example from dashclock)
