skip or download multiple selected files in a torrent

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -264,4 +264,8 @@
     <string name="open_drawer">open drawer</string>
         
     <string name="close_drawer">close drawer</string>
+        
+    <string name="unwant_file">Skip</string>
+        
+    <string name="want_file">Download</string>
 </resources>
