--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -337,7 +337,7 @@
         
     <string name="session_settings_alt_time">Time</string>
 
-    <string name="session_settings_alt_limit_time_format">%1$d:%2$d</string>
+    <string name="session_settings_alt_limit_time_format">%1$02d:%2$02d</string>
 
     <string name="session_settings_alt_down_limit">Alternate Download limit (KiB/s)</string>
         
@@ -362,4 +362,8 @@
     <string name="session_settings_global_peer_limit">Global peer limit</string>
         
     <string name="session_settings_torrent_peer_limit">Per torrent peer limit</string>
+        
+    <string name="session_settings_upload">Upload (KiB/s)</string>
+        
+    <string name="session_settings_download">Download (KiB/s)</string>
 </resources>
