code for the connections panel

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -369,9 +369,13 @@
         
     <string name="port_test_testing">Testing...</string>
         
-    <string name="port_test_error">Error</string>
+    <string name="port_test_error"><![CDATA[<font color="#CC0000">Error</font>]]></string>
         
-    <string name="port_test_closed">Closed</string>
+    <string name="port_test_closed"><![CDATA[<font color="#E73939">Closed</font>]]></string>
         
-    <string name="port_test_open">Open</string>
+    <string name="port_test_open"><![CDATA[<font color="#7CAF00">Open</font>]]></string>
+
+    <string name="blocklist_update_error"><![CDATA[<font color="#CC0000">Error</font>]]></string>
+
+    <string name="blocklist_updating">Updating</string>
 </resources>
