--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 * Implement Share via 'torrent-get' magnetLink field
 
+* Action-bar search in the torrent list
+
 * Use style="?android:listSeparatorTextViewStyle" for
   list view headers
 
