show when a torrent is paused

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -136,6 +136,7 @@
     <string name="status_state_seeding">&lt;b&gt;Seeding&lt;/b&gt;</string>
     <string name="status_state_download_waiting">&lt;b&gt;Queued for downloading&lt;/b&gt;</string>
     <string name="status_state_seed_waiting">&lt;b&gt;Queued for seeding&lt;/b&gt;</string>
+    <string name="status_state_paused"><![CDATA[<b>Paused</b>]]></string>
     <string name="status_state_stopped">&lt;b&gt;Stopped&lt;/b&gt;</string>
     <string name="status_state_check_waiting">&lt;b&gt;Queued for checking&lt;/b&gt;</string>
     <string name="status_state_checking">&lt;b&gt;Checking&lt;/b&gt; (%1$s%% tested)</string>
@@ -166,7 +167,8 @@
     <string name="none">None</string>
     <string name="unknown">Unknown</string>
 
-    <string name="status_stopped">Paused</string>
+    <string name="status_paused">Paused</string>
+    <string name="status_stopped">Stopped</string>
     <string name="status_check_waiting">Queued check</string>
     <string name="status_checking">Checking</string>
     <string name="status_download_waiting">Queued download</string>
