pass an arraylist of directories, instead of a json array
add an 'import session directories' to the profile directories fragment

update the gradle script

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -391,4 +391,5 @@
     <string name="find">Find</string>
 
     <string name="filter">Filter</string>
+    <string name="import_session_directories">Import sesssion directories</string>
 </resources>
