implement the correct json tracker replace request

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -417,6 +417,8 @@
     <string name="tracker_add">Add tracker</string>
     <string name="tracker_announce_url">Tracker announce URL</string>
     <string name="tracker_url_copy">The tracker\'s announce URL has been copied to the clipboard</string>
+    <string name="tracker_replace">Change tracker</string>
+    <string name="tracker_new_announce_url">New announce URL</string>
 
     <plurals name="tracker_peers">
         <item quantity="one">1 peer</item>
