--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -437,4 +437,5 @@
     <string name="status_bar_limit_format"><![CDATA[ (<i>%1$s</i>)]]></string>
     <string name="user_interface_header">User interface</string>
     <string name="show_status_bar">Status bar below the torrent list</string>
+    <string name="error_deleting_torrent_file">Unable to delete torrent file</string>
 </resources>
