--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="about_contact">"If you find any bugs, please write a post in the &lt;a href=https://plus.google.com/communities/115768021623513120266>Gear Shift G+ community&lt;/a>, filed under bugs. Doing so will also show other people whether the bug has been reported already. Be sure to turn on the 'Debug' options under 'General Settings', and include the logcat related to the app."</string>
     <string name="about_description">Gear Shift is a Transmission remote client, created to provide a great experience when dealing with all aspects of torrent management.</string>
-    <string name="about_donation">This app is provided for free, without any annoying ads. If you find it useful, consider &lt;a href=https://www.paypal.com/bg/cgi-bin/webscr?cmd=_donations&amp;business=support@sugr.org&amp;lc=US&amp;item_name=Gear Shift&amp;no_note=1&amp;no_shipping=1&amp;currency_code=EUR>sending a beer or two this way&lt;/a>.</string>
+    <string name="about_contact">If you find any bugs, please write a post in the <![CDATA[<a href="%1$s">Gear Shift G+ community</a>]]>, filed under bugs. Doing so will also show other people whether the bug has been reported already. Be sure to turn on the \'Debug\' options under \'General Settings\', and include the logcat related to the app.</string>
+    <string name="about_donation">This app is provided for free, without any annoying ads. If you find it useful, consider <![CDATA[<a href="%1$s">sending a beer or two this way</a>]]>.</string>
     <string name="about_item">О программе</string>
     <string name="about_name">Gear Shift</string>
     <string name="access_denied_empty_list">&lt;h2>&lt;font color=#cc0000>Доступ запрещен!&lt;/font>&lt;/h2>Неверные данные учетной записи, или ваш IP-адрес не занесен в белый список.</string>
