--- a/gearshift/src/main/res/values/strings.xml
+++ b/gearshift/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="alt_speed_label_on">Alternate speed limit on</string>
     <string name="alt_speed_label_off">Alternate speed limit off</string>
     <string name="alt_speed">Alternate speed limit</string>
+    <string name="add_torrent">Add torrent</string>
     <string name="settings">Settings</string>
 
     <string name="torrent_overview">Overview</string>
@@ -187,9 +188,11 @@
     <string name="remove_selected_directories_confirmation">Are you sure you want to remove the selected directories?</string>
     <string name="move_checkbox">Move the data from its current location</string>
     <string name="set_location">Set location</string>
-    
-    <string name="add_magnet">New magnet link</string>
-    <string name="add_torrent">New torrent</string>
+
+    <string name="browse">Browse</string>
+    <string name="invalid_magnet_link">Invalid magnet link</string>
+    <string name="add_new_magnet">New magnet link</string>
+    <string name="add_new_torrent">New torrent</string>
     <string name="start_paused_checkbox">Start paused</string>
     <string name="delete_local_checkbox">Remove local torrent file</string>
     
