always update the fragments if there's no error, regardless of whether the cursor has any data

--- a/TODO
+++ b/TODO
@@ -1,2 +1,2 @@
 * adding/removing torrents aren't reflected immediately in the list, even though the response is a success
-* if the last torrent in a directory is removed, the directory filter disappears
+* Directory filter is applied after the service finishes its request (if it currently is doing one)
