--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 * adding/removing torrents aren't reflected immediately in the list, even though the response is a success
 * Directory filter is applied after the service finishes its request (if it currently is doing one)
+* Detail panel in the tablet interface doesn't update the current hash/name when a torrent is added/deleted
