--- a/gearshift/src/main/res/values/strings.xml
+++ b/gearshift/src/main/res/values/strings.xml
@@ -156,10 +156,8 @@
     <string name="time_second">second</string>
 
     <string name="remove_selected_confirmation">Are you sure you want to remove the selected torrents?</string>
-    <string name="delete_selected_confirmation">Are you sure you want to remove and delete the data of the selected torrents?</string>
-
     <string name="remove_current_confirmation">Are you sure you want to remove \'%s\'?</string>
-    <string name="delete_current_confirmation">Are you sure you want to remove and delete the data of \'%s\'?</string>
+    <string name="remove_with_data">+ data</string>
 
     <string name="torrent_have_format">%1$s of %2$s (%3$s%%)</string>
     <string name="torrent_size_format">%1$s (%2$s pieces @ %3$s)</string>
